Se modifico el programa para la correcta ejecucion de la base de datos